Update 'd5jois19b-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:90b3128be818c4a62ae5b4cdb4552348fdb1a173@sha256:28fd143d1a497fc760518f13254e7d478629e647e778d46a9caf6d350450d090

--- a/components/d5jois19b-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/d5jois19b-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: d5jois19b-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:90b3128be818c4a62ae5b4cdb4552348fdb1a173@sha256:28fd143d1a497fc760518f13254e7d478629e647e778d46a9caf6d350450d090
+          name: container-image
